# claude-codex-handoff

./: .gitignore  AGENTS.md  LICENSE  README.md  codex-live-viewer.js  codex-viewer-tray.ps1  codex-viewer.bat  install-codex-notify-hook.bat  package.json  start-codex-live-viewer.bat  stop-codex-live-viewer.bat  viewer-ui.html
.claude-plugin/: marketplace.json
.github/workflows/: release.yml
docs/: UI-THEME.md
docs/superpowers/plans/: 2026-07-12-archived-sessions-tab.md  2026-07-12-history-search.md  2026-07-12-remote-access.md  2026-07-12-stuck-session-handling.md
docs/superpowers/specs/: 2026-07-12-history-search-design.md  (+2 more)
handoff/: README.md  browser-testing.md  coding.md  review.md
plugin/: CHANGELOG.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: viewer.md
plugin/scripts/: codex-companion.mjs  session-lifecycle-hook.mjs
plugin/viewer/: codex-live-viewer.js  viewer-ui.html
scripts/: upstream-diff.mjs
tests/: jobs-classifier.test.js  plugin-autostart.test.js  plugin-companion.test.js  plugin-fast.test.js  plugin-graceful-cancel.test.js  plugin-notify.test.js  plugin-process.test.js  plugin-sandbox.test.js  plugin-state.test.js  plugin-tracking.test.js  plugin-update-check.test.js  plugin-viewer-bundle.test.js  remote-access.test.js  search.test.js  server-actions.test.js  server-metadata.test.js  stopped-status.test.js  stuck-session.test.js  ui-actions.test.js  ui-jobs.test.js  ui-metadata.test.js  viewer-ui-state.test.js
tray-launcher/: Cargo.toml  README.md  build.rs  icon_art.rs
tray-launcher/src/: main.rs
(+11 files in other folders)
